# swagger-output.json
@@ -22,7 +22,7 @@
     }
   },
   "paths": {
-    "/auth/singup": {
+    "/api/v1/auth/sign-up": {
       "post": {
         "tags": [
           "Master Role"
@@ -40,13 +40,13 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         }
       }
     },
-    "/auth/signin": {
+    "/api/v1/auth/sign-in": {
       "post": {
         "tags": [
           "Master Role"
@@ -70,7 +70,7 @@
         }
       }
     },
-    "/auth/on-refresh": {
+    "/api/v1/auth/on-refresh": {
       "put": {
         "tags": [
           "Master Role"
@@ -93,8 +93,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -104,7 +104,7 @@
         ]
       }
     },
-    "/auth/submision": {
+    "/api/v1/auth/submision": {
       "post": {
         "tags": [
           "Master Role"
@@ -127,8 +127,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -138,7 +138,7 @@
         ]
       }
     },
-    "/auth/verify/{id}": {
+    "/api/v1/auth/verify/{id}": {
       "put": {
         "tags": [
           "Master Role"
@@ -159,8 +159,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -170,7 +170,7 @@
         ]
       }
     },
-    "/campaign/": {
+    "/api/v1/campaign/": {
       "get": {
         "tags": [
           "CAMPAIGN"
@@ -178,8 +178,8 @@
         "summary": "filter every campaign",
         "description": "this for filter campaign using category fundraising",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -210,8 +210,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -221,7 +221,7 @@
         ]
       }
     },
-    "/campaign/comment": {
+    "/api/v1/campaign/comment": {
       "post": {
         "tags": [
           "CAMPAIGN"
@@ -244,8 +244,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -255,7 +255,7 @@
         ]
       }
     },
-    "/campaign/donate": {
+    "/api/v1/campaign/donate": {
       "post": {
         "tags": [
           "CAMPAIGN"
@@ -278,8 +278,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -289,7 +289,7 @@
         ]
       }
     },
-    "/campaign/{id}": {
+    "/api/v1/campaign/{id}": {
       "put": {
         "tags": [
           "CAMPAIGN"
@@ -318,8 +318,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -348,8 +348,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -359,7 +359,7 @@
         ]
       }
     },
-    "/category/": {
+    "/api/v1/category/": {
       "get": {
         "tags": [
           "CATEGORIES"
@@ -374,8 +374,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -406,8 +406,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -417,7 +417,7 @@
         ]
       }
     },
-    "/category/{id}": {
+    "/api/v1/category/{id}": {
       "put": {
         "tags": [
           "CATEGORIES"
@@ -446,8 +446,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -476,8 +476,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -487,7 +487,7 @@
         ]
       }
     },
-    "/role/": {
+    "/api/v1/role/": {
       "get": {
         "tags": [
           "ROLE USER"
@@ -502,10 +502,15 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
@@ -529,8 +534,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -540,7 +545,7 @@
         ]
       }
     },
-    "/role/{id}": {
+    "/api/v1/role/{id}": {
       "put": {
         "tags": [
           "ROLE USER"
@@ -569,8 +574,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -599,8 +604,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -610,7 +615,7 @@
         ]
       }
     },
-    "/bank/": {
+    "/api/v1/bank/": {
       "get": {
         "tags": [
           "MASTER BANK"
@@ -625,8 +630,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -657,8 +662,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -668,7 +673,7 @@
         ]
       }
     },
-    "/bank/{id}": {
+    "/api/v1/bank/{id}": {
       "put": {
         "tags": [
           "MASTER BANK"
@@ -697,8 +702,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -727,8 +732,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         },
         "security": [
@@ -752,10 +757,6 @@
           "example": "example secret"
         },
         "username": {
-          "type": "string",
-          "example": "example secret"
-        },
-        "phone_number": {
           "type": "string",
           "example": "example secret"
         },
